Chapter11/k8s/bad-api-server/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badapiserver-deployment
  labels:
    app: badapiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: badapiserver
  template:
    metadata:
      labels:
        app: badapiserver
    spec:
      containers:
        - name: badapiserver
          livenessProbe:
            httpGet:
              path: /server_status
              port: 8000
          readinessProbe:
            httpGet:
              path: /server_status
              port: 8000
          image: asjadathick/recipe-search-service-bad-api-server:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: badapiserver-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: badapiserver

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  defaultBackend:
    service:
      name: badapiserver-service
      port:
        number: 8000
